--- a/simple.html
+++ b/simple.html
@@ -133,6 +133,7 @@
                 setup: {
                     gutter: 10,
                     width: 1100,
+                    name: "Root",
                     items: [
                         {
                             width: "100%",
