--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -8,13 +8,17 @@
                 position: fixed;
                 top: 0px;
                 left: 0px;
-                width: 100%;
+                width: calc(100% - 220px);
                 box-sizing: border-box;
                 background-color: #252526;
                 color: white;
-                height: 60px;
-                padding: 10px;
                 overflow: visible;
+            }
+
+            .editor-form {
+                overflow: auto;
+                padding: 5px 10px;
+                border-bottom: 1px solid #C0C0C0;
             }
 
             .editor-form .editor-form-section {
@@ -72,15 +76,15 @@
 
             .editor-tree {
                 position: fixed;
-                height: calc(100vh - 60px);
+                height: 100vh;
                 right: 0px;
                 width: 220px;
-                top: 60px;
+                top: 0px;
                 background-color: #252526;
                 box-sizing: border-box;
                 padding: 0px;
-                border-top: 1px solid #C0C0C0;
                 font-size: 13px;
+                border-left: 1px solid #C0C0C0;
             }
 
             .editor-tree div.editor-tree-item {
@@ -94,6 +98,23 @@
 
             .editor-tree div.editor-tree-item.selected {
                 background-color: #01629E;
+            }
+
+            .editor-breadcrumb {
+                padding: 0px 10px;
+                border-bottom: 1px solid #C0C0C0;
+                font-size: 12px;
+                color: #C0C0C0;
+            }
+
+            .editor-breadcrumb a {
+                color: inherit;
+                text-decoration: none;
+                margin-right: 5px;
+            }
+
+            .editor-breadcrumb a:hover {
+                color: white;
             }
         </style>
 
@@ -150,6 +171,17 @@
                 </div>
             </template>
         </div>
+
+        <template is="dom-if" if="{{breadcrumb.length}}">
+            <div class="editor-breadcrumb">
+                <template is="dom-repeat" items="{{breadcrumb}}">
+                    <a href="javascript:" on-click="selectCrumbItem" item="{{item}}">
+                        <span>&gt;</span>
+                        <span>{{item.name}}</span>
+                    </a>
+                </template>
+            </div>
+        </template>
 
         <juicy-highlight id="highlightTileRollover" strokewidth="1" strokecolor="#1E90FF" strokeoffset="2" fill="rgba(0, 191, 255, 0.2)"></juicy-highlight>
         <juicy-highlight id="highlightTileSelected" strokewidth="2" strokecolor="#1E90FF" strokeoffset="2"></juicy-highlight>
