--- a/simple.html
+++ b/simple.html
@@ -142,17 +142,17 @@
                             name: "ID",
                             hidden: false,
                             heightDynamic: true,
-                            precalculateHeight: 1,
+                            precalculateHeight: true,
                             priority: 1,
                             gutter: 0,
                             items: [
-                                { width: "225px", widthFlexible: true, id: 0, name: "Label", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.9 },
-                                { width: "875px", widthFlexible: true, id: 1, name: "Input", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.8 }
+                                { width: "225px", widthFlexible: true, id: 0, name: "Label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.9 },
+                                { width: "875px", widthFlexible: true, id: 1, name: "Input", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.8 }
                             ]
                         },
-                        { width: "100%", widthFlexible: true, id: 2, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.7 },
-                        { width: "100%", widthFlexible: true, id: 3, name: "Description", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.6 },
-                        { width: "100%", widthFlexible: true, id: 4, name: "Buttons", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.5 },
+                        { width: "100%", widthFlexible: true, id: 2, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.7 },
+                        { width: "100%", widthFlexible: true, id: 3, name: "Description", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.6 },
+                        { width: "100%", widthFlexible: true, id: 4, name: "Buttons", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.5 },
                         {
                             width: "100%",
                             widthFlexible: true,
@@ -164,22 +164,22 @@
                             priority: 0.41,
                             gutter: 0,
                             items: [
-                                { width: "100%", widthFlexible: true, id: 5, name: "Label", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.4 },
-                                { width: "100%", widthFlexible: true, id: 6, name: "List", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.31 }
+                                { width: "100%", widthFlexible: true, id: 5, name: "Label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.4 },
+                                { width: "100%", widthFlexible: true, id: 6, name: "List", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.31 }
                             ]
                         },
-                        { width: "100%", widthFlexible: true, id: 7, name: "Image label", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.3 },
-                        { width: "100%", widthFlexible: true, id: 8, name: "Image", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.2 },
-                        { width: "100%", widthFlexible: true, id: 9, name: "Barcode value", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.1 },
-                        { width: "100%", widthFlexible: true, id: 10, name: "Barcode image", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.09 }
+                        { width: "100%", widthFlexible: true, id: 7, name: "Image label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.3 },
+                        { width: "100%", widthFlexible: true, id: 8, name: "Image", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.2 },
+                        { width: "100%", widthFlexible: true, id: 9, name: "Barcode value", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.1 },
+                        { width: "100%", widthFlexible: true, id: 10, name: "Barcode image", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.09 }
                     ]
                 },
                 nestedSetup: {
                     gutter: 10,
                     width: 1100,
                     items: [
-                        { width: "100%", widthFlexible: true, id: 0, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 1 },
-                        { width: "100%", widthFlexible: true, id: 1, name: "Price", hidden: false, heightDynamic: true, precalculateHeight: 1, priority: 0.9 }
+                        { width: "100%", widthFlexible: true, id: 0, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 1 },
+                        { width: "100%", widthFlexible: true, id: 1, name: "Price", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.9 }
                     ]
                 }
             };
