Add tightGroup value to simple.html layout setup

--- a/simple.html
+++ b/simple.html
@@ -143,6 +143,7 @@
                             hidden: false,
                             heightDynamic: true,
                             precalculateHeight: true,
+                            tightGroup: true,
                             priority: 1,
                             gutter: 0,
                             items: [
@@ -161,6 +162,7 @@
                             hidden: false,
                             heightDynamic: true,
                             precalculateHeight: true,
+                            tightGroup: true,
                             priority: 0.41,
                             gutter: 0,
                             items: [
