Fix simple.html layout, rename name with itemName

--- a/simple.html
+++ b/simple.html
@@ -133,13 +133,13 @@
                 setup: {
                     gutter: 10,
                     width: 1100,
-                    name: "Root",
+                    itemName: "Root",
                     items: [
                         {
                             width: "100%",
                             widthFlexible: true,
                             id: "group_1",
-                            name: "ID",
+                            itemName: "ID",
                             hidden: false,
                             heightDynamic: true,
                             precalculateHeight: true,
@@ -147,18 +147,18 @@
                             priority: 1,
                             gutter: 0,
                             items: [
-                                { width: "225px", widthFlexible: true, id: 0, name: "Label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.9 },
-                                { width: "875px", widthFlexible: true, id: 1, name: "Input", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.8 }
+                                { width: "225px", widthFlexible: true, id: 0, itemName: "Label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.9 },
+                                { width: "875px", widthFlexible: true, id: 1, itemName: "Input", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.8 }
                             ]
                         },
-                        { width: "100%", widthFlexible: true, id: 2, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.7 },
-                        { width: "100%", widthFlexible: true, id: 3, name: "Description", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.6 },
-                        { width: "100%", widthFlexible: true, id: 4, name: "Buttons", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.5 },
+                        { width: "100%", widthFlexible: true, id: 2, itemName: "Name", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.7 },
+                        { width: "100%", widthFlexible: true, id: 3, itemName: "Description", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.6 },
+                        { width: "100%", widthFlexible: true, id: 4, itemName: "Buttons", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.5 },
                         {
                             width: "100%",
                             widthFlexible: true,
                             id: "group_2",
-                            name: "Suppliers",
+                            itemName: "Suppliers",
                             hidden: false,
                             heightDynamic: true,
                             precalculateHeight: true,
@@ -166,22 +166,22 @@
                             priority: 0.41,
                             gutter: 0,
                             items: [
-                                { width: "100%", widthFlexible: true, id: 5, name: "Label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.4 },
-                                { width: "100%", widthFlexible: true, id: 6, name: "List", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.31 }
+                                { width: "100%", widthFlexible: true, id: 5, itemName: "Label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.4 },
+                                { width: "100%", widthFlexible: true, id: 6, itemName: "List", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.31 }
                             ]
                         },
-                        { width: "100%", widthFlexible: true, id: 7, name: "Image label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.3 },
-                        { width: "100%", widthFlexible: true, id: 8, name: "Image", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.2 },
-                        { width: "100%", widthFlexible: true, id: 9, name: "Barcode value", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.1 },
-                        { width: "100%", widthFlexible: true, id: 10, name: "Barcode image", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.09 }
+                        { width: "100%", widthFlexible: true, id: 7, itemName: "Image label", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.3 },
+                        { width: "100%", widthFlexible: true, id: 8, itemName: "Image", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.2 },
+                        { width: "100%", widthFlexible: true, id: 9, itemName: "Barcode value", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.1 },
+                        { width: "100%", widthFlexible: true, id: 10, itemName: "Barcode image", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.09 }
                     ]
                 },
                 nestedSetup: {
                     gutter: 10,
                     width: 1100,
                     items: [
-                        { width: "100%", widthFlexible: true, id: 0, name: "Name", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 1 },
-                        { width: "100%", widthFlexible: true, id: 1, name: "Price", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.9 }
+                        { width: "100%", widthFlexible: true, id: 0, itemName: "Name", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 1 },
+                        { width: "100%", widthFlexible: true, id: 1, itemName: "Price", hidden: false, heightDynamic: true, precalculateHeight: true, priority: 0.9 }
                     ]
                 }
             };
