--- a/simple.html
+++ b/simple.html
@@ -195,6 +195,8 @@
             }
 
             setTimeout(function () {
+                window.editor = document.querySelector("juicy-tile-simple-editor");
+
                 // Hack to recalculate nested juicy-tile-list height.
                 document.querySelector("juicy-tile-list").refresh(true);
             }, 100);
